--- a/hw6/hw6.qmd
+++ b/hw6/hw6.qmd
@@ -29,21 +29,25 @@ library(tidymodels)
 library(readr)
 library(tswge)
 library(ggplot2)
+library(yardstick)
+
 
 acfdf <- function(vec) {
-    vacf <- acf(vec, plot = F)
-    with(vacf, data.frame(lag, acf))
+  vacf <- acf(vec, plot = F)
+  with(vacf, data.frame(lag, acf))
 }
 
 ggacf <- function(vec) {
-    ac <- acfdf(vec)
-    ggplot(data = ac, aes(x = lag, y = acf)) + geom_hline(aes(yintercept = 0)) + 
-        geom_segment(mapping = aes(xend = lag, yend = 0))
+  ac <- acfdf(vec)
+  ggplot(data = ac, aes(x = lag, y = acf)) +
+    geom_hline(aes(yintercept = 0)) +
+    geom_segment(mapping = aes(xend = lag, yend = 0))
 }
 
 tplot <- function(vec) {
-    df <- data.frame(X = vec, t = seq_along(vec))
-    ggplot(data = df, aes(x = t, y = X)) + geom_line()
+  df <- data.frame(X = vec, t = seq_along(vec))
+  ggplot(data = df, aes(x = t, y = X)) +
+    geom_line()
 }
 ```
 
@@ -70,7 +74,7 @@ The [`NYSE.csv`](https://raw.githubusercontent.com/ucla-econ-425t/2023winter/mas
 ```{r}
 # Read in NYSE data from url
 
-url = "https://raw.githubusercontent.com/ucla-biostat-212a/2024winter/master/slides/data/NYSE.csv"
+url <- "https://raw.githubusercontent.com/ucla-biostat-212a/2024winter/master/slides/data/NYSE.csv"
 NYSE <- read_csv(url)
 
 NYSE
@@ -83,33 +87,37 @@ The **autocorrelation** at lag $\ell$ is the correlation of all pairs $(v_t, v_{
 #| fig-cap: "The autocorrelation function for log volume. We see that nearby values are fairly strongly correlated, with correlations above 0.2 as far as 20 days apart."
 
 ggacf(NYSE$log_volume) + ggthemes::theme_few()
-
 ```
-
 Do a similar plot for (1) the correlation between $v_t$ and lag $\ell$ `Dow Jones return` $r_{t-\ell}$ and (2) correlation between $v_t$ and lag $\ell$ `Log volatility` $z_{t-\ell}$.
 
 ```{r}
-seq(1, 30) %>% 
-  map(function(x) {cor(NYSE$log_volume , lag(NYSE$DJ_return, x), use = "pairwise.complete.obs")}) %>% 
-  unlist() %>% 
-  tibble(lag = 1:30, cor = .) %>% 
-  ggplot(aes(x = lag, y = cor)) + 
-  geom_hline(aes(yintercept = 0)) + 
-  geom_segment(mapping = aes(xend = lag, yend = 0)) + 
+seq(1, 30) %>%
+  map(function(x) {
+    cor(NYSE$log_volume, lag(NYSE$DJ_return, x), use = "pairwise.complete.obs")
+  }) %>%
+  unlist() %>%
+  tibble(lag = 1:30, cor = .) %>%
+  ggplot(aes(x = lag, y = cor)) +
+  geom_hline(aes(yintercept = 0)) +
+  geom_segment(mapping = aes(xend = lag, yend = 0)) +
   ggtitle("AutoCorrelation between `log volume` and lagged `DJ return`")
 ```
+Lecture Notes: Even though the 2 variables are different, there appears to be a
+correlation between the log volume and lagged dj return, especially when lag
+increases.
+
 ```{r}
-seq(1, 30) %>% 
-  map(function(x) {cor(NYSE$log_volume , lag(NYSE$log_volatility, x), use = "pairwise.complete.obs")}) %>% 
-  unlist() %>% 
-  tibble(lag = 1:30, cor = .) %>% 
-  ggplot(aes(x = lag, y = cor)) + 
-  geom_hline(aes(yintercept = 0)) + 
-  geom_segment(mapping = aes(xend = lag, yend = 0)) + 
+seq(1, 30) %>%
+  map(function(x) {
+    cor(NYSE$log_volume, lag(NYSE$log_volatility, x), use = "pairwise.complete.obs")
+  }) %>%
+  unlist() %>%
+  tibble(lag = 1:30, cor = .) %>%
+  ggplot(aes(x = lag, y = cor)) +
+  geom_hline(aes(yintercept = 0)) +
+  geom_segment(mapping = aes(xend = lag, yend = 0)) +
   ggtitle("AutoCorrelation between `log volume` and lagged `log volatility`")
 ```
-
-
 
 ### Project goal
 
@@ -130,27 +138,55 @@ Use the $R^2$ between forecast and actual values as the cross validation and tes
 We use the straw man (use yesterday’s value of `log trading volume` to predict that of today) as the baseline method. Evaluate the $R^2$ of this method on the test data.
 
 ```{r}
+# MY SOLUTION (Prof confirmed it's correct)
 # Baseline method
 
 NYSE |> head()
 
+# don't need this, it was already split oops
 # train (before Jan 1st, 1980)
-train <- NYSE |> filter(year(NYSE$date) < 1980)
-train
+# train <- NYSE |> filter(year(NYSE$date) < 1980)
+# train
+#
+# # test (after Jan 1st, 1980)
+# test <- NYSE |> filter(year(NYSE$date) >= 1980)
+# test
 
-# test (after Jan 1st, 1980)
-test <- NYSE |> filter(year(NYSE$date) >= 1980)
+# THERES ALREADY A BINARY TRAIN COLUMN (T/F)
+train <- NYSE |> filter(train)
+train
+test <- NYSE |> filter(!train)
 test
 
-#Use lag variable to shift back by 1 day (time series)
-yday <- lag(test$log_volume,1)
+# dont need to split train/test, but we do need to split for
+# cross fold time series
 
-#Predict
+# Use lag variable to shift back by 1 day (time series)
+yday <- lag(test$log_volume, 1)
 
-#Calculate R^2
-#use cor function to get R
-r_squared_baseline = cor(yday, test$log_volume, use = "pairwise.complete.obs")^2
+# Predict
+
+# Calculate R^2
+# use cor function to get R
+r_squared_baseline <- cor(yday, test$log_volume, use = "pairwise.complete.obs")^2
 r_squared_baseline
+```
+```{r}
+# PROFESSOR'S SOLUTION (this way helps set it up for later problems)
+L <- 5
+
+# loop through lags 1-4
+for (i in seq(1, L)) {
+  NYSE <- NYSE |>
+    # need to give var new name, and the name will change by which loop it is
+    mutate(
+      !!paste("DJ_return_lag", i, sep = "") := lag(NYSE$DJ_return, i),
+      !!paste0("log_volume_lag_", i, sep = "") := lag(NYSE$log_volume, i),
+      !!paste("log_volatility_lag", i, sep = "") := lag(NYSE$log_volatility)
+    )
+}
+NYSE <- NYSE |> na.omit()
+NYSE
 ```
 
 
@@ -177,71 +213,83 @@ known as an **order-$L$ autoregression** model or **AR($L$)**.
 - Hint: [Workflow: Lasso](https://ucla-biostat-212a.github.io/2024winter/slides/06-modelselection/workflow_lasso.html) is a good starting point.
 
 ```{r}
+# drop beginning trading days that have NA
+NYSE_test <- NYSE |>
+  filter(train == "FALSE") |>
+  select(-train) |>
+  drop_na()
+dim(NYSE_test)
+```
+```{r}
+r2_test_strawman <- rsq_vec(NYSE_test$log_volume, lag(NYSE_test$log_volume, 1)) |> round(2)
 
+r2_test_strawman
 ```
 
+
 ```{r}
-norm_recipe <- recipe(log_volume ~ ., 
-                      data = train) |>
-  #remove date because it is not a predictor
+norm_recipe <- recipe(log_volume ~ .,
+  data = train
+) |>
+  # remove date because it is not a predictor
   step_rm(date) |>
-  #create dummy variables
+  # create dummy variables
   step_dummy(all_nominal()) |>
   # zero-variance filter
   step_zv(all_predictors()) |>
-  #need to center and scale for lasso
+  # need to center and scale for lasso
   step_normalize(all_predictors())
-  #prep(training = train, retain = TRUE)
+# prep(training = train, retain = TRUE)
 norm_recipe
 ```
 ```{r}
-#LASSO MOD
+# LASSO MOD
 
-#Create a model specification
+# Create a model specification
 lambda_grid <- c(0, 10^seq(-3, 5, length.out = 100))
 elastic_mod <- linear_reg(penalty = tune(), mixture = 0.5) |>
   # mixture = 0 (ridge), mixture = 1 (lasso)
-  #0 < mixture < 1 specifies an elastic net model, interpolating lasso and ridge.
+  # 0 < mixture < 1 specifies an elastic net model, interpolating lasso and ridge.
   set_engine("glmnet", path_values = lambda_grid)
 elastic_mod
 
-#Bundle Workflow
-lr_wf <- 
+# Bundle Workflow
+lr_wf <-
   workflow() |>
   add_model(elastic_mod) |>
   add_recipe(norm_recipe)
 lr_wf
 
-#Tune
+# Tune
 elastic_grid <-
   grid_regular(penalty(range = c(-2, 3), trans = log10_trans()), levels = 100)
 elastic_grid
 
-#Cross- Validation
+# Cross- Validation
 set.seed(212)
 elastic_folds <- vfold_cv(train, v = 10)
 elastic_folds
 
-#Fit C-V
-elastic_fit <- 
+# Fit C-V
+elastic_fit <-
   lr_wf %>%
   tune_grid(
     resamples = elastic_folds,
     grid = elastic_grid
-    )
+  )
 elastic_fit
 ```
 
 ```{r}
-#Visualize CV
-lasso_fit %>%
+# Visualize CV
+elastic_fit %>%
   collect_metrics() %>%
   print(width = Inf) %>%
   filter(.metric == "rmse") %>%
-  ggplot(mapping = aes(x = penalty, y = mean)) + 
-  geom_point() + 
-  geom_line() + 
-  labs(x = "Penalty", y = "CV RMSE") + 
+  ggplot(mapping = aes(x = penalty, y = mean)) +
+  geom_point() +
+  geom_line() +
+  labs(x = "Penalty", y = "CV RMSE") +
   scale_x_log10(labels = scales::label_number())
 ```
 
@@ -266,10 +314,12 @@ Summarize the performance of different machine learning forecasters in the follo
 
 | Method | CV $R^2$ | Test $R^2$ |
 |:------:|:------:|:------:|:------:|
-| Baseline | | | |
+| Baseline | - - | | |
 | AR(5) | | | |
 | Random Forest | | | |
 | Boosting | | | |
+
+Note: Baseline is linear so there's no CV R^2
 
 ## ISL Exercise 12.6.13 (90 pts)
 
@@ -279,7 +329,7 @@ measurements on 1,000 genes. The  rst 20 samples are from healthy
 patients, while the second 20 are from a diseased group.
 
 ```{r}
-#load library
+# load library
 library(workflows)
 library(parsnip)
 library(tidyclust)
@@ -303,32 +353,32 @@ type of linkage used?
 data("penguins", package = "modeldata")
 
 ```{r}
-#Divide into healthy and diseased columns
-healthy <- ds[1:20,]
-diseased <- ds[21:40,]
+# Divide into healthy and diseased columns
+healthy <- ds[1:20, ]
+diseased <- ds[21:40, ]
 ```
 
 ```{r}
-healthy_group <- pivot_longer(healthy, cols = everything(), names_to = "gene", values_to = "healthy") 
+healthy_group <- pivot_longer(healthy, cols = everything(), names_to = "gene", values_to = "healthy")
 healthy_group
 
-diseased_group <-pivot_longer(diseased, cols = everything(), names_to = "gene", values_to = "diseased") 
+diseased_group <- pivot_longer(diseased, cols = everything(), names_to = "gene", values_to = "diseased")
 diseased_group
 
-#merge back into one
+# merge back into one
 ds_grouped <- bind_cols(healthy_group, diseased_group)
 ds_grouped
 ```
 
 ```{r}
-#shuffle rows
+# shuffle rows
 ds_grouped <- ds_grouped |>
   sample_n(nrow(ds_grouped))
 ds_grouped
 ```
 
 ```{r}
-#	Average -> Mean inter-cluster dissimilarity. Compute all pairwise dissimilarities between the observations in cluster A and the observations in cluster B, and record the AVG of these dissimilarities.
+# 	Average -> Mean inter-cluster dissimilarity. Compute all pairwise dissimilarities between the observations in cluster A and the observations in cluster B, and record the AVG of these dissimilarities.
 
 hc_spec_avg <- hier_clust(
   num_clusters = 3,
@@ -347,7 +397,7 @@ hc_fit_avg |>
 
 hc_fit_avg$fit %>% plot()
 
-#Extract fit avg summary
+# Extract fit avg summary
 hc_summary_avg <- hc_fit_avg %>% extract_fit_summary()
 
 hc_summary_avg %>% str()
@@ -356,7 +406,7 @@ hc_fit_avg %>% extract_centroids()
 ```
 
 ```{r}
-#Complete	-> Maximal inter-cluster dissimilarity. Compute all pairwise dissimilarities between the observations in cluster A and the observations in cluster B, and record the LARGEST of these dissimilarities.
+# Complete	-> Maximal inter-cluster dissimilarity. Compute all pairwise dissimilarities between the observations in cluster A and the observations in cluster B, and record the LARGEST of these dissimilarities.
 
 hc_spec_large <- hier_clust(
   num_clusters = 3,
@@ -375,7 +425,7 @@ hc_fit_large |>
 
 hc_fit_large$fit %>% plot()
 
-#Extract fit large summary
+# Extract fit large summary
 hc_summary_large <- hc_fit_large %>% extract_fit_summary()
 
 hc_summary_large %>% str()
@@ -384,7 +434,7 @@ hc_fit_large %>% extract_centroids()
 ```
 
 ```{r}
-#Single	-> Maximal inter-cluster dissimilarity. Compute all pairwise dissimilarities between the observations in cluster A and the observations in cluster B, and record the SMALLEST of these dissimilarities.
+# Single	-> Maximal inter-cluster dissimilarity. Compute all pairwise dissimilarities between the observations in cluster A and the observations in cluster B, and record the SMALLEST of these dissimilarities.
 
 hc_spec_small <- hier_clust(
   num_clusters = 3,
@@ -403,7 +453,7 @@ hc_fit_small |>
 
 hc_fit_small$fit %>% plot()
 
-#Extract small avg summary
+# Extract small avg summary
 hc_summary_small <- hc_fit_small %>% extract_fit_summary()
 
 hc_summary_small %>% str()
@@ -412,7 +462,7 @@ hc_fit_small %>% extract_centroids()
 ```
 
 ```{r}
-#Centroid	--> Dissimilarity between the centroid for cluster A (a mean vector of length) and the centroid for cluster B. Centroid linkage can result in undesirable inversions.
+# Centroid	--> Dissimilarity between the centroid for cluster A (a mean vector of length) and the centroid for cluster B. Centroid linkage can result in undesirable inversions.
 
 hc_spec_centroid <- hier_clust(
   num_clusters = 3,
@@ -431,7 +481,7 @@ hc_fit_centroid |>
 
 hc_fit_centroid$fit %>% plot()
 
-#Extract fit avg summary
+# Extract fit avg summary
 hc_summary_centroid <- hc_fit_centroid %>% extract_fit_summary()
 
 hc_summary_centroid %>% str()
@@ -443,7 +493,6 @@ hc_fit_centroid %>% extract_centroids()
 ### PCA and UMAP (30 pts)
 
 ```{r}
-
 ```
 
 
